# c77mods

./: .env  .gitignore  README.md  config.yaml  flake.nix  header.txt  pyproject.toml  save.pkl
c77/: __init__.py  __main__.py  archive_handlers.py  config.py  game_binding.py  logging.py  main.py  models.py  state.py  test_handlers.py  ui.py  utils.py  zip.py
docs/: internals.md
