[tool.poetry]
name = "c77"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.2"
rich = "^13.8.1"
pytest = "^8.3.3"
result = "^0.17.0"

[tool.poetry.scripts]
c77 = "c77:main"
# c77new = "c77.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
